--- a/app/less/blog-add-form.less
+++ b/app/less/blog-add-form.less
@@ -14,7 +14,7 @@
 
 .release-date {
   .border-left-radius(4px)!important;
-  margin: 37px 0;
+  margin: 46px 0;
 }
 
 .release-time {
